# test-fastapi-project

./: pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/routers/: users.py
tests/: test_users.py
