[project]
name = "test-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
python_files = ["tests/*.py"]

[tool.setuptools.packages.find]
where = ["."]